--- a/client/src/pages/About.css
+++ b/client/src/pages/About.css
@@ -1,96 +1,354 @@
-.aboutCard h4 {
-    color: #31b675;
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+          margin: 0;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  background-color: #F8F9FA;
+  color: #222222;
+  font-weight: 400;
+}
+
+strong {
+  font-weight: 700;
+}
+
+img {
+  max-width: 100%;
+}
+
+p {
+  font-size: 1.125rem;
+  color: #222222;
+  margin: 0 0 15px;
+  line-height: 1.6;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
+h1 {
+  color: #000000;
+  font-size: 36px;
+}
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 80px;
   }
-  .aboutCard h1 {
+}
+
+h2 {
+  color: #222222;
+  font-size: 30px;
+}
+
+@media (min-width: 768px) {
+  h2 {
+    font-size: 60px;
+  }
+}
+
+h3 {
+  color: #444444;
+  font-size: 24px;
+}
+
+@media (min-width: 768px) {
+  h3 {
+    font-size: 50px;
+  }
+}
+
+h4 {
+  color: #555555;
+  font-size: 22px;
+}
+
+@media (min-width: 768px) {
+  h4 {
+    font-size: 40px;
+  }
+}
+
+h5 {
+  color: #666666;
+  font-size: 20px;
+}
+
+@media (min-width: 768px) {
+  h5 {
     font-size: 35px;
-    font-weight: 100;
   }
-  .aboutCard h1 span {
-    font-weight: bold;
+}
+
+h6 {
+  color: #777777;
+  font-size: 18px;
+}
+
+@media (min-width: 768px) {
+  h6 {
+    font-size: 32px;
   }
-  .aboutCard p {
-    margin-top: 20px;
-    font-weight: 300;
+}
+
+section {
+  padding: 90px 15px;
+}
+
+a.cta {
+  padding: 10px 30px;
+  text-align: center;
+  text-decoration: none;
+  background-color: #f72d3d;
+  border: 1px solid #d41c2a;
+  border-radius: 25px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  display: inline-block;
+  -webkit-box-shadow: rgba(100, 100, 111, 0.8) 0px 7px 19px 0px;
+          box-shadow: rgba(100, 100, 111, 0.8) 0px 7px 19px 0px;
+  -webkit-transition: all 0.8s ease;
+  transition: all 0.8s ease;
+}
+
+a.cta:hover {
+  background-color: #f75763;
+  border: 1px solid #3b1215;
+  color: #000000;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.container img {
+  padding: 0.25rem;
+  border: 1px solid #bdbdbd;
+  border-radius: 0.25rem;
+}
+
+.banner {
+  background: -webkit-gradient(linear, left, top, right, top, from(rgba(241, 157, 0, 0.8)), to(rgba(0, 0, 0, 0.5))), url("./../components/Images/about-banner.png") no-repeat; 
+ background: linear-gradient(90deg, rgba(241, 157, 0, 0.8), rgba(0, 0, 0, 0.5)), url("./../components/Images/about-banner.png") no-repeat; 
+  background-position: top right;
+  background-size: cover;
+  width: 100%;
+}
+
+.banner h1 {
+  color: rgba(255, 255, 255, 0.85);
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.banner p {
+  color: #FFFFFF;
+  font-size: 1.375rem;
+  letter-spacing: 1.5px;
+  font-weight: 100;
+  text-shadow: 2px 2px 7px #222222;
+}
+
+.first {
+  background-color: #FFFFFF;
+  background-image: linear-gradient(315deg, #a7a8a8 0%, #E9EBEC 74%);
+}
+
+.first .container {
+  max-width: 800px;
+}
+
+.second {
+  background-color: #fff8e6;
+}
+
+.second .container {
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .second .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
-  .aboutCard .row1 {
-    padding-right: 30px;
+}
+
+@media (min-width: 768px) {
+  .second .container .left-img {
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
   }
-  .aboutCard .row.image,
-  .aboutCard .image {
-    position: relative;
+}
+
+@media (min-width: 768px) {
+  .second .container .right-content {
+    -ms-flex-preferred-size: 65%;
+        flex-basis: 65%;
   }
-  .aboutCard .control-btn button {
-    left: 40%;
+}
+
+.second .container .right-content h2 {
+  margin: 30px 0 0;
+}
+
+@media (min-width: 768px) {
+  .second .container .right-content h2 {
+    margin: 0;
   }
-  .aboutCard .control-btn i {
-    font-size: 20px;
+}
+
+.third {
+  background-color: #e6f5fc;
+}
+
+@media (min-width: 768px) {
+  .third .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
-  .aboutCard .image::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 89.5%;
-    height: 44vh;
-    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.third .container .left-content {
+  -ms-flex-preferred-size: 68%;
+      flex-basis: 68%;
+}
+
+.third .container .right-img {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+}
+
+.four {
+  background-color: #c6fcb8;
+}
+
+.four .container {
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .four .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
-  .aboutCard .image::before {
-    content: "";
-    position: absolute;
-    bottom: 5%;
-    left: 10%;
-    background-color: rgba(0, 0, 0, 0.7);
-    width: 70%;
-    height: 30px;
-    border-radius: 5px;
-    z-index: -1;
+}
+
+.four .container .member {
+  background-color: #c0c6fa;
+  padding: 20px;
+  margin: 0 0 60px;
+  border-radius: 5px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+@media (min-width: 768px) {
+  .four .container .member {
+    -ms-flex-preferred-size: 31%;
+        flex-basis: 31%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
-  .aboutCard .control-btn::before {
-    content: "";
-    position: absolute;
-    bottom: 2%;
-    left: 15%;
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 60%;
-    height: 30px;
-    border-radius: 5px;
-    z-index: -1;
+}
+
+@media (min-width: 768px) {
+  .four .container .member h3 {
+    font-size: 32px;
   }
-  .features .flex_space {
-    flex-direction: row-reverse;
-  }
-  .features img {
-    width: 90%;
-  }
-  .features .control-btn,
-  .features .image::after,
-  .features .image::before,
-  .features .control-btn::before {
-    display: none;
-  }
-  .features h1 {
-    font-weight: bold;
-  }
-  .features h1 span {
-    color: #31b675;
-  }
-  @media screen and (max-width: 768px) {
-    .features .flex_space,
-    .aboutCard {
-      flex-direction: column;
-    }
-    .aboutCard .image::after,
-    .aboutCard .image::before,
-    .aboutCard .control-btn::before {
-      display: none;
-    }
-    .aboutCard .row {
-      width: 100%;
-    }
-    .aboutCard .image {
-      margin-top: 50px;
-    }
-    .aboutCard img {
-      width: 100%;
-    }
-  }
+}
+
+.four .container .member .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.four .container .member .social a img {
+  border: none;
+  max-width: 40px;
+}
+
+.five {
+  background-color: #fcde88;
+}
+
+.five .container {
+  max-width: 700px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 7px 29px 0px;
+          box-shadow: rgba(0, 0, 0, 0.8) 0px 7px 29px 0px;
+}
+
+.five .container .video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+
+.five .container .video-wrapper video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.six .container {
+  text-align: center;
+  max-width: 800px;
+}
+
+footer {
+  background-color: #222222;
+  padding: 40px 15px;
+}
+
+footer .container {
+  max-width: 600px;
+}
+
+footer p {
+  color: #FFFFFF;
+  margin: 0;
+  text-align: center;
+  font-weight: 100;
+  font-size: 14px;
+}
+/*# sourceMappingURL=style.css.map */
