--- a/client/src/components/Layout/App.css
+++ b/client/src/components/Layout/App.css
@@ -4,48 +4,40 @@
     box-sizing: border-box;
     font-family: "Reem Kufi", sans-serif !important;
   }
-  
-  /* nav-body {
-    display: flex;
-    align-items: right;
-    justify-content: space-between;
-    min-height: 90px;
-  } */
-  .nav-display {
+ 
+  .navbar-links-container ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
+    float: right;
   }
-  li{
+  ul li{
+    display: inline-block; padding:10px;
+    font-size:20px; font-family:raleway;
+  }
+  ul li:hover{
+    color:orange;
+    
+  }
+  .logo-img{
     float: left;
+    position: relative;
+    margin: 10px 15px 15px 10px;
   }
-  li a{
-    display: block;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-  }
-
-  /* li a:hover{
-    background-color: #111;
-  } */
-  /* .navbar-logo {
-    margin-right: 10%;
-  } */
-  /* .navbar-menu-container {
-    display: inline-block;
-    margin-right: 5%;
-  } */
+ 
+  
   .navbar-links-container a {
-    margin-right: 3rem;
     text-decoration: none;
     color: black;
     font-size: 1.1rem;
     font-weight: 600;
+    float: right;
+  }
+  .navbar-links-container a:hover{
+    color:orange;
   }
   .primary-button {
     padding: 0.9rem 1.75rem;
@@ -66,16 +58,7 @@
     cursor: pointer;
     overflow: hidden;
   }
-  .navbar-right {
-    display: inline-block;
-    /* flex-direction: row; */
-    /* align-items: right; */
-  }
- .nav-display img{
-  margin-right: 5px;
-  width: 5%;
-  height: 4%;
- }
+ 
  
   .footer-body {
     background-color: black;
@@ -90,8 +73,9 @@
     position: relative;
   }
   .footer-logo {
-    height: 50%;
-    width: 50%;
+    height: 20%;
+    width: 40%;
+    margin-top: 10%;
   }
   .footer-icons {
     margin-top: 2.5rem;
