--- a/client/src/components/Layout/App.css
+++ b/client/src/components/Layout/App.css
@@ -63,14 +63,23 @@
   .footer-body {
     background-color: black;
     border: 13px grey;
-    /* margin-top: 70%; */
   }
   .footer-wrapper {
-    margin: 16rem 10rem;
+    margin: 10rem 5rem;
     display: flex;
-    margin-top: 10rem;
-    
+    margin-top: 10rem;    
     position: relative;
+  }
+  @media (max-width:600px){
+    .footer-wrapper {
+      margin: 20%;
+      display: block;
+    }
+    .footer-body{
+      width: 100vw;
+      display: block;
+      margin: 0;
+    }
   }
   .footer-logo {
     height: 20%;
@@ -152,14 +161,30 @@
       transform: rotate(1turn);
     }
   }
-  
+
+  .resgister-page {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-image: url('https://t4.ftcdn.net/jpg/01/19/11/55/360_F_119115529_mEnw3lGpLdlDkfLgRcVSbFRuVl6sMDty.jpg');
+    
+  } 
+
+  .login-head{
+    font-size: 30px;
+    margin-left:20%;
+  }
+
   .login-design{
     position: relative;
     z-index: 0;
     border-radius: 10px;
     overflow: hidden;
     padding: 2rem;
-    
+    width: 40%;
+    margin-top: 3rem;
+
     &::before {
       content: '';
       position: absolute;
@@ -184,10 +209,11 @@
       top: 6px;
       width: calc(100% - 12px);
       height: calc(100% - 12px);
-      background: white;
+      background: rgba(245, 245, 245, 0.788);
       border-radius: 5px;
       animation: opacityChange 3s infinite alternate;
     }
+
   }
   
   @keyframes opacityChange {
