--- a/client/src/pages/Contact.css
+++ b/client/src/pages/Contact.css
@@ -1,19 +1,48 @@
 .contact-page-wrapper {
-    margin: 10rem 20rem;
+	margin-right: 30%;
+	margin-left: 25%;
     display: flex;
     flex-direction: column;
-    margin-top: 5rem;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    margin-top: 3rem;
+    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2);
 }
 .contact-body {
-  background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(207,63,56,0.9836309523809523) 100%, rgba(0,212,255,1) 100%);
+	background-image: url('https://media.istockphoto.com/id/1311934969/photo/contact-us.webp?b=1&s=170667a&w=0&k=20&c=2sJEN1Hhg6heUi1ZxKs6pJDwcyLYXPc4pUGd3hEjOjE=');
+	background-size: 100vh;
+}
+
+.contact_text h3{
+	text-align: center;
+	font-size: 15px;
+	font-weight: 800;
+}
+.contact_text h5{
+	text-align: center;
+	font-size: 15px;
+	font-weight: 400;
+	margin-bottom: 5%;
+}
+.contact_options{
+	display: flex ;
+	justify-content: space-evenly;
+}
+.contact_option{
+	border: 3px solid gray;
+	border-radius: 8px;
+  	font-size: large;
+  	padding: 8px 15px;
+	margin-bottom: 5%;
 }
 .primary-heading {
   text-align: center;
+  font-size: 50px;
+  margin-top: 1rem;
+  font-weight: 300;
 }
-h3{
-  font-size: 18px;
+.primary-heading1{
+  font-size: 25px;
+  margin-top: 1rem;
+  text-align: center;
 }
 .secondary-button {
   -ms-transform: translateY(-50%);
@@ -25,7 +54,7 @@ h3{
   font-size: large;
   padding: 8px 15px;
 }
-input[type=text], input[type=number], textarea {
+input[type=name], input[type=email], input[type=phone], textarea {
   width: 90%;
   padding: 12px 20px;
   margin-left: 3%;
@@ -47,13 +76,13 @@ input[type=text], input[type=number], textarea {
 	z-index: 0;
 	border-radius: 10px;
 	overflow: hidden;
-	padding: 2rem;
+	/* padding: 2rem; */
 	
 	&::before {
 		content: '';
 		position: absolute;
 		z-index: -2;
-		left: -50%;
+		left: -20%;
 		top: -50%;
 		width: 200%;
 		height: 200%;
@@ -69,7 +98,7 @@ input[type=text], input[type=number], textarea {
 		content: '';
 		position: absolute;
 		z-index: -1;
-		left: 6px;
+		left: 2px;
 		top: 6px;
 		width: calc(100% - 12px);
 		height: calc(100% - 12px);
@@ -85,5 +114,22 @@ input[type=text], input[type=number], textarea {
 	}
 	100% {
 		opacity: .5;
+	}
+}
+
+@media (max-width: 800px) {
+	.contact_options{
+		display: block;
+	}
+	.contact-page-wrapper{
+		margin-left: 0%;
+		margin-right: 0%;
+		display: block;
+	}
+}
+@media (max-width: 600px) {
+	.primary-heading{
+		font-size: 30px;
+		font-weight: 600;
 	}
 }
