--- a/client/src/pages/Testimonial.css
+++ b/client/src/pages/Testimonial.css
@@ -1,66 +1,168 @@
-.Testimonial .box {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    position: relative;
-    z-index: 2;
-    background-color: white;
-    border-radius: 5px;
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+h1,h2,h3,h4 {
+  letter-spacing: 0.1rem;
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.25rem;
+}
+h4 {
+  font-size: 0.875rem;
+}
+p {
+  margin-bottom: 1.25rem;
+  color: hsl(210, 22%, 49%);
+}
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 4rem;
   }
-  .box{
-    width: 80%;
-    margin-left: 5%;
-    height: fit-content;
+  h2 {
+    font-size: 2.5rem;
   }
-  .details{
-    margin-left: 50%;
-    font-size: 100;
-    font: 500;
+  h3 {
+    font-size: 1.75rem;
   }
-  .para{
-    margin-left: 5%;
-    margin-right: 5%;
-    font-size: large;
+  h4 {
+    font-size: 1rem;
   }
-  .Testimonial .box p {
-    font-size: 13px;
-    font-style: italic;
-    line-height: 24px;
-    font-weight: 400;
-    opacity: 0.5;
+  body {
+    font-size: 1rem;
   }
-  .Testimonial .box hr {
-    height: 2px;
-    background-color: black;
-    margin: 20px 0 20px 0;
-    opacity: 0.2;
+  h1,h2,h3,h4 {
+    line-height: 1;
   }
-  .Testimonial .box .img {
-    margin-right: 20px;
-    width: 70px;
-    height: 70px;
+}
+.section {
+  width: 90vw;
+  margin: 5rem auto;
+  max-width: var(--max-width);
+}
+
+@media screen and (min-width: 992px) {
+  .section {
+    width: 95vw;
   }
-  .Testimonial .box img {
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
+}
+.title {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.title h2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 300;
+}
+.section-center {
+  margin: 0 auto;
+  margin-top: 4rem;
+  width: 80vw;
+  height: 480px;
+  max-width: 800px;
+  text-align: center;
+  position: relative;
+  display: flex;
+  overflow: hidden;
+}
+.person-img {
+  border-radius: 50%;
+  margin-bottom: 1rem;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border: 4px solid hsl(210, 31%, 80%);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+article h4 {
+  text-transform: uppercase;
+  color: hsl(21, 62%, 45%);
+  margin-bottom: 0.25rem;
+}
+.title {
+  text-transform: capitalize;
+  margin-bottom: 0.75rem;
+  color: hsl(209, 34%, 30%);
+}
+.text {
+  max-width: 35em;
+  margin: 0 auto;
+  margin-top: 2rem;
+  line-height: 2;
+  color: hsl(210, 22%, 49%);
+}
+.icon {
+  font-size: 3rem;
+  margin-top: 1rem;
+  color: hsl(21, 62%, 45%);
+}
+.prev,
+.next {
+  position: absolute;
+  top: 200px;
+  transform: translateY(-50%);
+  background: hsl(210, 22%, 49%);
+  color: #fff;
+  width: 1.25rem;
+  height: 1.25rem;
+  display: grid;
+  place-items: center;
+  border-color: transparent;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+.prev:hover,
+.next:hover {
+  background: hsl(21, 62%, 45%);
+}
+.prev {
+  left: 0;
+}
+.next {
+  right: 0;
+}
+@media (min-width: 800px) {
+  .text {
+    max-width: 45em;
   }
-  .Testimonial .box h3 {
-    font-weight: 500;
-    letter-spacing: 1px;
+  .prev,
+  .next {
+    width: 2rem;
+    height: 2rem;
+    font-size: 1.5rem;
   }
-  .Testimonial .box span {
-    font-size: 13px;
-    font-weight: 400;
-  }
-  .Testimonial .box i {
-    font-size: 170px;
-    position: absolute;
-    top: 20%;
-    left: 35%;
-    color: #f1f1f1;
-    z-index: -1;
-  }
-  @media screen and (max-width: 768px) {
-    .Testimonial .grid1 {
-      grid-template-columns: repeat(1, 1fr);
-    }
-  }
+}
+article {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all 0.3s linear
+}
+article.activeSlide {
+  opacity: 1;
+  transform: translateX(0);
+}
+article.lastSlide {
+  transform: translateX(-100%);
+}
+article.nextSlide {
+  transform: translateX(100%);
+}
