--- a/client/src/pages/Vendors.css
+++ b/client/src/pages/Vendors.css
@@ -30,7 +30,7 @@
 
   /* Sidebar */
   .sidebar {
-    width: 15%;
+    width: fit-content;
     position: relative;
     height: 100%;
     border-right: 2px solid #e5e5e5;
@@ -38,6 +38,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  @media screen and (max-width: 600px) {
+    .sidebar{
+    width: fit-content;
+    }
   }
   
   .logo-container {
@@ -51,8 +57,7 @@
   /* Recommended */
   .recommended-flex {
     display: flex;
-    margin-left: 20%;
-    /* margin-top: -200vh; */
+    margin-left: 10%;
   }
   
   .recommended-title {
@@ -203,18 +208,14 @@
   }
 
 
-
  .dcard {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 400px;
   margin: 2%;
-  /* margin-left: 20%; */
   text-align: center;
   font-family: arial;
   float: right;
   width: 25%;
-  /* padding: 0 10px; */
-
 }
 
 .price {
@@ -239,8 +240,7 @@
 }
 .drow {
   margin: 0 -5px;
-  margin-left: 20%;
-  margin-top: -80%;
+  margin-right: 5%;
 }
 
 /* Clear floats after the columns */
@@ -250,10 +250,49 @@
   clear: both;
 }
 
-@media screen and (max-width: 600px) {
+.ven{
+  display: flex;
+}
+
+@media screen and (min-width: 401px) {
   .dcard {
     width: 100%;
     display: block;
     margin-bottom: 20px;
   }
+}
+@media screen and (max-width: 400px) {
+  .ven{
+    display: block;
+  }
+  .dcard {
+    width: 80%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 610px ) {
+  .dcard {
+    width: 40%;
+    display: flex;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1200px ) {
+  .dcard {
+    width: 25%;
+    display: flex;
+    margin-bottom: 20px;
+  }
+}
+
+#rchoice{
+  font-size: 0.9rem;
+  padding: 2px 5px;
+}
+
+label {
+  font-family: sans-serif;
+  font-size: 1rem;
+  padding-right: 10px;
 }
